# byteforge

./: .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  SKILL.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml  test.yml
src/byteforge/: __init__.py  _base.py  _registry.py  _validation.py  bcd.py  boolean.py  dec_float.py  gray_code.py  ibm_float.py  ieee754.py  linear_scaled.py  mil_std_1750a.py  offset_binary.py  ones_complement.py  ti_float.py  twos_complement.py  unsigned.py
src/byteforge/_c/: bcd.c  dec.c  gray.c  ibm.c  milstd1750a.c  ti.c  ufunc.c  utils.c
tests/: test_bcd.py  test_benchmarks.py  test_boolean.py  test_bytes.py  test_c_parity.py  test_dec_float.py  test_empty_arrays.py  test_gray_code.py  test_ibm_float.py  test_ieee754.py  test_linear_scaled.py  test_mil_std_1750a.py  test_multidimensional.py  test_new_features.py  test_offset_binary.py  test_ones_complement.py  test_registry.py  test_roundtrip_fuzz.py  test_ti_float.py  test_twos_complement.py  test_unsigned.py  test_validation_improvements.py
