[project]
name = "byteforge"
version = "0.1.0"
description = "Encode and decode numbers as unsigned integer bit patterns"
readme = "README.md"
authors = [
    { name = "Jonathan Olsten", email = "jolsten@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.141",
    "mypy>=1.19.1",
    "pytest>=8.4",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["byteforge"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
packages = ["byteforge"]
mypy_path = "src"
