[project]
name = "byteforge"
version = "0.1.0"
description = "Encode and decode numbers as unsigned integer bit patterns"
readme = "README.md"
authors = [
    { name = "Jonathan Olsten", email = "jolsten@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0",
]

[build-system]
requires = ["setuptools>=64", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "hypothesis>=6.141",
    "mypy>=1.19.1",
    "pytest>=8.4",
    "ruff>=0.15.4",
    "setuptools>=64",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["byteforge"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
packages = ["byteforge"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "byteforge._c.*"
ignore_missing_imports = true

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
test-requires = ["pytest", "hypothesis"]
test-command = "pytest {project}/tests/"
